--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -1,6 +1,7 @@
 doctype
 html
   head
+    title MultiVision
     base(href="/")
     link(href="/favicon.ico", rel="shortcut icon", type="image/x-icon")
     link(rel="stylesheet", href="/css/bootstrap.css")
