--- a/server/views/partials/main.jade
+++ b/server/views/partials/main.jade
@@ -1,2 +1,10 @@
-h1 This is a Partial
-  h2 {{myVar}}
+.container
+  .jumbotron
+    h1 MultiVision
+    p Welcome to MultiVision! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis n
+
+  .row
+    .col-md-6
+      div(ng-include="'/partials/featured-courses'")
+    .col-md-6
+      div(ng-include="'/partials/new-courses'")
