--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -10,6 +10,7 @@ block main-content
             ul.nav.navbar-nav
               li
                 a(href='/') Home
+            dev(ng-include="'/partials/account/navbar-login'")
                 
   section.content
     div(ng-view) 
